# zion-discord-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  semantic-release.yml  validate-commits.yml
docs/: COMMIT_DOCS_SUMMARY.md  SEMANTIC_RELEASE.md  SEMANTIC_RELEASE_SETUP.md
src/: __version__.py  config.py
src/cogs/: music.py
